# gitignore-create

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: building.yml  codeql-analysis.yml
ignore/: ignore.py  make_request.py  tui.py  utils.py
tests/: test.py
