[project]
name = "gitignore-create"
version = "0.1.0"
description = "Command line tool for quick generation of .gitignore files"
authors = [{ name = "Ilia Ilmer", email = "contact@iliailmer.com" }]
requires-python = ">=3.10,<3.11"
license = "MIT"
dependencies = ["requests>=2.28.1,<3", "textual>=0.50.0"]

[dependency-groups]
dev = [
  "black>=22.6.0,<23",
  "isort>=5.10.1,<6",
  "flake8>=4.0.1,<5",
  "mypy>=0.971,<0.972",
  "pytest>=7.1.2,<8",
]

[tool.pyright]
venv = ".venv"
venvPath = "."
typeCheckingMode = "standard"

[project.scripts]
gitignore-create = "ignore.ignore:main"

[tool.hatch.build.targets.wheel]
packages = ["ignore"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
